--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_MenuPartial.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_MenuPartial.cshtml
@@ -37,6 +37,16 @@
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                 <!-- Add icons to the links using the .nav-icon class with font-awesome or any other icon font library -->
 
+                <li class="nav-header">MINHAS SALAS</li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-controller="Home" asp-action="Index">
+                        <i class="nav-icon fa fa-temperature-high"></i>
+                        <p>
+                            Monitorar Salas
+                        </p>
+                    </a>
+                </li>
+
                 <li class="nav-header">COMPARTIMENTOS</li>
                 <li class="nav-item">
                     <a class="nav-link" asp-controller="Organizacao" asp-action="Index">
