--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Home/Index.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Home/Index.cshtml
@@ -1,72 +1,208 @@
-﻿@{
+﻿@model Model.ViewModel.SalaUsuarioViewModel
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <section class="content">
     <div class="container-fluid">
-        <!-- Small boxes (Stat box) -->
         <div class="row">
-            <div class="col-lg-3 col-6">
-                <!-- small box -->
-                <div class="small-box bg-info">
-                    <div class="inner">
-                        <h3>150</h3>
+            <div class="col-md-12">
+                <div class="card card-secondary">
+                    <div class="card-header">
+                        <h2 class="card-title">Minhas Salas Exclusivas</h2>
+                    </div>
+                    <div class="card-body">
 
-                        <p>New Orders</p>
+                        <div class="container-salas-exclusivas">
+                            @foreach (var item in Model.SalasExclusivas)
+                            {
+                                <div class="card">
+                                    <div class="card-body">
+                                        <div class="card-title">
+                                            <h4>
+                                                @item.Bloco.Titulo <br />
+                                                @item.Sala.Titulo
+                                            </h4>
+                                        </div>
+                                        <form asp-controller="Home" asp-action="MonitorarSala" name="form-@item.SalaExclusiva.Id">
+                                            <div class="form-control" hidden>
+                                                <input class="form-control" name="IdSala" id="IdSala" value="@item.SalaExclusiva.Id" />
+                                            </div>
+                                            <input type="submit" value="sub" />
+                                            <div class="float-right">
+                                                <div class="align-element">
+                                                    <h5 class="card-text">Luzes</h5>
+                                                    <label class="switch" oninput="submitForm('form-@item.SalaExclusiva.Id')">
+                                                        <input type="checkbox" name="AcaoLuzes" id="AcaoLuzes" checked/>
+                                                        <span class="slider round"></span>
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <div class="float-right">
+                                                <div class="align-element">
+                                                    <h5 class="card-text">Ar Condicionado</h5>
+                                                    <label class="switch">
+                                                        <input type="checkbox" name="AcaoArCondicionado" checked/>
+                                                        <span class="slider round"></span>
+                                                    </label>
+                                                </div>
+                                            </div>
+                                        </form>
+
+                                    </div>
+                                </div>
+                            }
+                        </div>
                     </div>
-                    <div class="icon">
-                        <i class="ion ion-bag"></i>
-                    </div>
-                    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                 </div>
             </div>
-            <!-- ./col -->
-            <div class="col-lg-3 col-6">
-                <!-- small box -->
-                <div class="small-box bg-success">
-                    <div class="inner">
-                        <h3>53<sup style="font-size: 20px">%</sup></h3>
-
-                        <p>Bounce Rate</p>
-                    </div>
-                    <div class="icon">
-                        <i class="ion ion-stats-bars"></i>
-                    </div>
-                    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-                </div>
-            </div>
-            <!-- ./col -->
-            <div class="col-lg-3 col-6">
-                <!-- small box -->
-                <div class="small-box bg-warning">
-                    <div class="inner">
-                        <h3>44</h3>
-
-                        <p>User Registrations</p>
-                    </div>
-                    <div class="icon">
-                        <i class="ion ion-person-add"></i>
-                    </div>
-                    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-                </div>
-            </div>
-            <!-- ./col -->
-            <div class="col-lg-3 col-6">
-                <!-- small box -->
-                <div class="small-box bg-danger">
-                    <div class="inner">
-                        <h3>65</h3>
-
-                        <p>Unique Visitors</p>
-                    </div>
-                    <div class="icon">
-                        <i class="ion ion-pie-graph"></i>
-                    </div>
-                    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-                </div>
-            </div>
-            <!-- ./col -->
         </div>
-
-    </div><!-- /.container-fluid -->
+    </div>
 </section>
+
+<section class="content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card card-secondary">
+                    <div class="card-header">
+                        <h2 class="card-title">Minhas Reservas</h2>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-body">
+                            <div class="btn-group btn-group-toggle col-md-12" data-toggle="buttons" style="overflow: auto">
+                                <label class="btn btn-primary active">
+                                    <input type="radio" name="options" id="option_a1" autocomplete="off" checked> Domingo
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="option_a2" autocomplete="off"> Segunda
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="option_a3" autocomplete="off"> Terça
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="option_a3" autocomplete="off"> Quarta
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="option_a3" autocomplete="off"> Quinta
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="option_a3" autocomplete="off"> Sexta
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="option_a3" autocomplete="off"> Sábado
+                                </label>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-header card-title">
+                                <h4>Sala 105 / Bloco C</h4>
+                            </div>
+                            <div class="card-body">
+                                <div class="align-element">
+                                    <h5 class="card-text">7:15 às 8:40 </h5>
+                                    <a href="#" class="btn btn-danger">Cancelar</a>
+                                </div>
+
+                                <div class="float-right">
+                                    <div class="align-element">
+                                        <h5 class="card-text">Luzes</h5>
+                                        <label class="switch">
+                                            <input type="checkbox">
+                                            <span class="slider round"></span>
+                                        </label>
+                                    </div>
+                                </div>
+
+                                <div class="float-right">
+                                    <div class="align-element">
+                                        <h5 class="card-text">Ar Condicionado</h5>
+                                        <label class="switch">
+                                            <input type="checkbox" checked>
+                                            <span class="slider round"></span>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header card-title">
+                                <h4>Sala 110 / Bloco E</h4>
+                            </div>
+                            <div class="card-body">
+                                <div class="align-element">
+                                    <h5 class="card-text">7:15 às 8:40 </h5>
+                                    <a href="#" class="btn btn-danger">Cancelar</a>
+                                </div>
+
+                                <div class="float-right">
+                                    <div class="align-element">
+                                        <h5 class="card-text">Luzes</h5>
+                                        <label class="switch">
+                                            <input type="checkbox">
+                                            <span class="slider round"></span>
+                                        </label>
+                                    </div>
+                                </div>
+
+                                <div class="float-right">
+                                    <div class="align-element">
+                                        <h5 class="card-text">Ar Condicionado</h5>
+                                        <label class="switch">
+                                            <input type="checkbox" checked>
+                                            <span class="slider round"></span>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header card-title">
+                                <h4>Sala 115 / Bloco D</h4>
+                            </div>
+                            <div class="card-body">
+                                <div class="align-element">
+                                    <h5 class="card-text">7:15 às 8:40 </h5>
+                                    <a href="#" class="btn btn-danger">Cancelar</a>
+                                </div>
+
+                                <div class="float-right">
+                                    <div class="align-element">
+                                        <h5 class="card-text">Luzes</h5>
+                                        <label class="switch">
+                                            <input type="checkbox">
+                                            <span class="slider round"></span>
+                                        </label>
+                                    </div>
+                                </div>
+
+                                <div class="float-right">
+                                    <div class="align-element">
+                                        <h5 class="card-text">Ar Condicionado</h5>
+                                        <label class="switch">
+                                            <input type="checkbox" checked>
+                                            <span class="slider round"></span>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+@section Scripts {
+
+    <script>
+        function submitForm(name){
+            document.forms[name].submit();
+        }
+    </script>
+
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
