--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Edit.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Model.SalaParticularViewModel
+﻿@model Model.AuxModel.SalaParticularAuxModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -12,33 +12,56 @@
                     <div class="card-header">
                         <h2 class="card-title">Atualizar Sala Exclusiva</h2>
                     </div>
-                    <form asp-action="Edit">
+                    <form asp-action="Edit" asp-controller="SalaParticular">
                         <div class="card-body">
 
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="form-group" hidden>
-                                <label asp-for="Id" class="control-label"></label>
-                                <input asp-for="Id" class="form-control" />
-                                <span asp-validation-for="Id" class="text-danger"></span>
+                                <label asp-for="SalaParticular.Id" class="control-label"></label>
+                                <input asp-for="SalaParticular.Id" class="form-control" />
+                                <span asp-validation-for="SalaParticular.Id" class="text-danger"></span>
                             </div>
-                            <div class="ocupation col-md-8">
-                                <div class="form-group">
-                                    <label asp-for="BlocoId" class="form-control-label" for="select-bloco">Filtrar Salas por Bloco</label>
-                                    @Html.DropDownListFor(model => model.BlocoId, ViewBag.blocos as SelectList, new
-                                    { @class = "form-control", @id = "select-bloco", @onchange = "loadSalas()" })
+                            <div class="form-group col-md-7">
+                                <label class="control-label">Selecione a Organização</label>
+                                <select class="form-control" asp-for="Organizacao" id="select-organizacao" onchange="loadBlocosAndUsuarios()">
+                                    @foreach (var item in ViewBag.Organizacoes)
+                                    {
+                                        <option value="@item.Id"> @item.Cnpj | @item.RazaoSocial </option>
+                                    }
+                                </select>
+                                <span class="text-danger"></span>
+                            </div>
+                            <div class="ocupation col-md-5">
+                                <div class="form-group" id="ListElements">
+                                    <label asp-for="BlocoSalas" class="control-label">Selecione o Bloco</label>
+                                    <select class="form-control" asp-for="BlocoSalas" onchange="loadSalas()" id="select-bloco">
+                                        @foreach (var item in ViewBag.Blocos)
+                                        {
+                                            <option value="@item.Id"> @item.Id | @item.Titulo </option>
+                                        }
+                                    </select>
+                                    <span asp-validation-for="BlocoSalas" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="SalaId.Id" class="form-control-label" for="select-sala">Selecionar Sala</label>
-                                    @Html.DropDownListFor(model => model.SalaId.Id, ViewBag.salas as SelectList, new
-                                    { @class = "form-control", @id = "select-sala" })
-                                    <span asp-validation-for="SalaId.Id" class="text-danger"></span>
+                                    <label asp-for="SalaParticular.SalaId" class="form-control-label" for="select-sala">Selecionar Sala</label>
+                                    <select class="form-control" asp-for="SalaParticular.SalaId" id="select-sala">
+                                        @foreach (var item in ViewBag.Salas)
+                                        {
+                                            <option value="@item.Id"> @item.Id | @item.Titulo </option>
+                                        }
+                                    </select>
+                                    <span asp-validation-for="SalaParticular.SalaId" class="text-danger"></span>
                                 </div>
                             </div>
-                            <div class="form-group align-element col-md-8">
-                                <label asp-for="Responsavel.Id" class="control-label">Responsável</label>
-                                @Html.DropDownListFor(model => model.Responsavel.Id, ViewBag.usuarios as SelectList, new
-                                { @class = "form-control", @id = "select-usuario" })
-                                <span asp-validation-for="Responsavel.Id" class="text-danger"></span>
+                            <div class="form-group col-md-5">
+                                <label asp-for="SalaParticular.UsuarioId" class="control-label">Responsável</label>
+                                <select class="form-control" asp-for="SalaParticular.UsuarioId" id="select-usuario">
+                                    @foreach (var item in ViewBag.Usuarios)
+                                    {
+                                        <option value="@item.Id"> @item.Cpf | @item.Nome </option>
+                                    }
+                                </select>
+                                <span asp-validation-for="SalaParticular.UsuarioId" class="text-danger"></span>
                             </div>
                         </div>
                         <div class="card-footer">
@@ -66,7 +89,6 @@ else if (TempData["mensagemErro"] != null)
 @section Scripts {
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="~/js/sweet-alert.js"></script>
-
     <script src="~/js/sala-exclusiva-script.js"></script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
