--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_Layout.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_Layout.cshtml
@@ -131,7 +131,7 @@ else
         <script src="~/plugins/sparklines/sparkline.js"></script>
         <!-- JQVMap -->
         <script src="~/plugins/jqvmap/jquery.vmap.min.js"></script>
-        <script src="plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
+        <script src="~/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
         <!-- jQuery Knob Chart -->
         <script src="~/plugins/jquery-knob/jquery.knob.min.js"></script>
         <!-- daterangepicker -->
