--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Edit.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Edit.cshtml
@@ -89,6 +89,6 @@ else if (TempData["mensagemErro"] != null)
 @section Scripts {
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="~/js/sweet-alert.js"></script>
-    <script src="~/js/sala-exclusiva-script.js"></script>
+    <script src="~/js/load-itens-script.js"></script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
