--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/HardwareDeBloco/Edit.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/HardwareDeBloco/Edit.cshtml
@@ -16,19 +16,35 @@
                         <div class="card-body">
 
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-                            <div class="form-group">
+                            <div class="form-group" hidden>
+                                <input asp-for="Id" id="input-id" class="form-control" />
+                            </div>
+                            <div class="form-group col-md-7">
+                                <label class="control-label">Selecione a Organização</label>
+                                <select class="form-control" asp-for="Organizacao" id="select-organizacao" onchange="loadBlocos()">
+                                    @foreach (var item in ViewBag.Organizacoes)
+                                    {
+                                        <option value="@item.Id"> @item.Cnpj | @item.RazaoSocial </option>
+                                    }
+                                </select>
+                                <span class="text-danger"></span>
+                            </div>
+                            <div class="form-group col-md-5">
+                                <label asp-for="BlocoId" class="control-label"></label>
+                                <select class="form-control" asp-for="BlocoId" id="select-bloco">
+                                    @foreach (var item in ViewBag.Blocos)
+                                    {
+                                        <option value="@item.Id"> @item.Id | @item.Titulo </option>
+                                    }
+                                </select>
+                                <span asp-validation-for="BlocoId" class="text-danger"></span>
+                            </div>
+                            <div class="form-group col-md-5">
                                 <label asp-for="MAC" class="control-label"></label>
                                 <input asp-for="MAC" id="input-mac" class="form-control" />
                                 <span asp-validation-for="MAC" class="text-danger"></span>
                             </div>
-                            <div class="form-group">
-                                <label asp-for="BlocoId" class="control-label"></label>
-                                @Html.DropDownListFor(model => model.BlocoId, ViewBag.blocos as SelectList, new
-                                { @class = "form-control" })
-                                <span asp-validation-for="BlocoId" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
+                            <div class="form-group col-md-5">
                                 <label asp-for="TipoHardwareId" class="control-label"></label>
                                 @Html.DropDownListFor(model => model.TipoHardwareId, ViewBag.tipoHardware as SelectList, new
                                 { @class = "form-control" })
@@ -69,6 +85,7 @@ else if (TempData["mensagemErro"] != null)
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="~/js/sweet-alert.js"></script>
     <script src="~/js/custom.js"></script>
+    <script src="~/js/load-itens-script.js"></script>
     <script src="~/plugins/inputmask/inputmask/jquery.mask.js"></script>
 
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
