--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Home/Index.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
                     <div class="card-header">
                         <h2 class="card-title">Minhas Salas Exclusivas</h2>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body col-xl-12">
                         <div class="overlay-wrapper" id="tela-carregamento" hidden>
                             <div class="overlay dark">
                                 <i class="fas fa-3x fa-sync-alt fa-spin"></i>
@@ -24,6 +24,7 @@
                                 @foreach (var item in Model.SalasUsuario)
                                 {
                                     <div class="card">
+
                                         <div class="card-body">
                                             <div class="card-title">
                                                 <h4>
@@ -32,7 +33,6 @@
                                                 </h4>
                                             </div>
                                             <form asp-controller="Home" asp-action="MonitorarSala" id="form-@item.Monitoramento.Id">
-
                                                 <div class="form-control" hidden>
                                                     <input class="form-control" name="SalaId" value="@item.Monitoramento.SalaId" />
                                                     <input class="form-control" name="Id" value="@item.Monitoramento.Id" />
@@ -70,6 +70,7 @@
                                                     </div>
                                                 </div>
                                             </form>
+
                                         </div>
                                     </div>
                                 }
