--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Create.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Create.cshtml
@@ -134,6 +134,7 @@ else if (TempData["mensagemErro"] != null)
 
 @section Scripts {
 
+    <script src="~/js/load-itens-script.js"></script>
     <script src="~/js/sala-exclusiva-script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="~/js/sweet-alert.js"></script>
