--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_MenuPartial.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_MenuPartial.cshtml
@@ -83,7 +83,7 @@
 
                 <li class="nav-header">RESERVAS</li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="#" asp-action="#">
+                    <a class="nav-link" asp-controller="ReservaSala" asp-action="Index">
                         <i class="nav-icon fas fa-ticket-alt"></i>
                         <p>
                             Reservar Sala
