--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Home/Index.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Home/Index.cshtml
@@ -36,6 +36,7 @@
                                                 <div class="form-control" hidden>
                                                     <input class="form-control" name="SalaId" value="@item.Monitoramento.SalaId" />
                                                     <input class="form-control" name="Id" value="@item.Monitoramento.Id" />
+                                                    <input class="form-control" name="SalaParticular" value="True" />
                                                 </div>
                                                 <div class="float-right">
                                                     <div class="float-right">
