Mudanca de idioma do datatable para pt e Add Crud usuario

--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Login/Index.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Login/Index.cshtml
@@ -45,7 +45,7 @@
     <a href="forgot-password.html">Esqueceu a senha?</a>
 </p>
 <p class="mb-0">
-    <a asp-action="Create" asp-controller="usuario" class="text-center">Criar usuário</a>
+    <a asp-action="Create" asp-controller="Usuario" class="text-center">Criar usuário</a>
 </p>
 
 
