--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Details.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Details.cshtml
@@ -10,7 +10,7 @@
             <div class="col-md-12">
                 <div class="card card-secondary">
                     <div class="card-header">
-                        <h2 class="card-title">Detalhes </h2>
+                        <h2 class="card-title">Detalhes da Sala Particular</h2>
                     </div>
 
                     <div class="card-body">
