--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_MenuPartial.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_MenuPartial.cshtml
@@ -24,7 +24,7 @@
 <!-- Main Sidebar Container -->
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
+    <a asp-controller="Home" asp-action="Index" class="brand-link">
         <img src="~/img/knuth.png" alt="Knuth" class="brand-image img-circle elevation-3"
              style="opacity: .8">
         <span class="brand-text font-weight-light">Knuth</span>
@@ -183,7 +183,7 @@
                     </li>
                     <li class="nav-header">COLABORADORES</li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="#" asp-action="#">
+                        <a class="nav-link" asp-controller="Usuario" asp-action="Index">
                             <i class="nav-icon fa fa-users"></i>
                             <p>Usuários</p>
                         </a>
