--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Index.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Index.cshtml
@@ -22,7 +22,7 @@
                     </div>
                     <div class="card-body">
                         <table id="table-search" class="table table-bordered table-striped">
-                            <thead>++++++++++++++++++++++++++++++
+                            <thead>
                                 <tr>
                                     <th>
                                         @Html.DisplayNameFor(model => model.Id)
